title overlap fixed

--- a/fashionpicker/scss-css/style.scss
+++ b/fashionpicker/scss-css/style.scss
@@ -532,8 +532,16 @@ main {
        img {
            width: 435px !important;
            height: 435px !important;
-           margin-bottom:40px !important;
+           margin-bottom: 40px !important;
        } 
+
+       &:last-child {
+           
+               p {
+                   bottom: -10px !important;
+               }
+           
+       }
     }
 
     .user-designs {
